--- a/index.html
+++ b/index.html
@@ -9,5 +9,18 @@ Project Portfolio
 </header>
 
 <body>
+  <a href="https://geekyness.github.io/Showcasing-projects/">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/c/c4/Rosaparks.jpg" alt="" width="" height="">
+  </a>
+   <a href="">
+    <img src="" alt="" width="" height="">
+  </a>
+  
+   <a href="https://geekyness.github.io/Showcasing-projects-online-worker-survey/">
+    <img src="https://image.flaticon.com/icons/png/128/2706/2706988.png" alt="" width="" height="">
+  </a>
+  <a href="">
+    <img src="https://www.flaticon.com/free-icon/piercing_1071767" alt="https://geekyness.github.io/Piercing-world/" width="" height="">
+  </a>
 </body>
 </html>
