--- a/index.html
+++ b/index.html
@@ -9,18 +9,14 @@ Project Portfolio
 </header>
 
 <body>
-  <a href="https://geekyness.github.io/Showcasing-projects/">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/c/c4/Rosaparks.jpg" alt="" width="" height="">
+  <a class="prodigy" href="https://geekyness.github.io/Showcasing-projects/">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/c/c4/Rosaparks.jpg" alt="Rosa Parks" width="200px" height="200px">
+ 
+   <a class="prodigy" href="https://geekyness.github.io/Showcasing-projects-online-worker-survey/">
+    <img src="https://image.flaticon.com/icons/png/128/2706/2706988.png" alt="survey" width="200px" height="200px">
   </a>
-   <a href="">
-    <img src="" alt="" width="" height="">
-  </a>
-  
-   <a href="https://geekyness.github.io/Showcasing-projects-online-worker-survey/">
-    <img src="https://image.flaticon.com/icons/png/128/2706/2706988.png" alt="" width="" height="">
-  </a>
-  <a href="">
-    <img src="https://www.flaticon.com/free-icon/piercing_1071767" alt="https://geekyness.github.io/Piercing-world/" width="" height="">
+  <a class="prodigy" href="https://geekyness.github.io/Piercing-world/">
+    <img src="https://www.flaticon.com/free-icon/piercing_1071767" alt="piercing" width="200px" height="200px">
   </a>
 </body>
 </html>
