--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Project Portfolio
     <img src="https://image.flaticon.com/icons/png/128/2706/2706988.png" alt="survey" width="200px" height="200px">
   </a>
   <a class="prodigy" href="https://geekyness.github.io/Piercing-world/">
-    <img src="https://www.flaticon.com/free-icon/piercing_1071767" alt="piercing" width="200px" height="200px">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcROOE8MwICia8OolqeHOic2KhsILF8AU9fUTA&usqp=CAU" alt="piercing" width="200px" height="200px">
   </a>
 </body>
 </html>
