--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
 Project Portfolio
 </title>
 <style>
+  .parent{
+    display:flex;
+  }
+  .prodigy{
+  display:inline-block:
+  }
 </style>
 </header>
 
 <body>
+ <div class="parent">
   <a class="prodigy" href="https://geekyness.github.io/Showcasing-projects/">
     <img src="https://upload.wikimedia.org/wikipedia/commons/c/c4/Rosaparks.jpg" alt="Rosa Parks" width="200px" height="200px">
  
