--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@ Project Portfolio
 </header>
 
 <body>
+  <h1> Les petits projets d'Inès>
  <div class="parent">
-  <a class="prodigy" href="https://geekyness.github.io/Showcasing-projects/">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/c/c4/Rosaparks.jpg" alt="Rosa Parks" width="200px" height="200px">
+ <p> Voici une page internet rendant hômmage à Rosa Parks <a class="prodigy" href="https://geekyness.github.io/Showcasing-projects/">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/c/c4/Rosaparks.jpg" alt="Rosa Parks" width="200px" height="200px"></p>
  
-   <a class="prodigy" href="https://geekyness.github.io/Showcasing-projects-online-worker-survey/">
+  <p>voici un formulaire en ligne sur le travail à distance, sujet qui me tient à coeur <a class="prodigy" href="https://geekyness.github.io/Showcasing-projects-online-worker-survey/">
     <img src="https://image.flaticon.com/icons/png/128/2706/2706988.png" alt="survey" width="200px" height="200px">
   </a>
-  <a class="prodigy" href="https://geekyness.github.io/Piercing-world/">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcROOE8MwICia8OolqeHOic2KhsILF8AU9fUTA&usqp=CAU" alt="piercing" width="200px" height="200px">
+  <p> ce site présente des piercings ce type d'architecture de site peut être utiliser pour présenter des oeuvres d'artistes ou des produits d'un site marchands<a class="prodigy" href="https://geekyness.github.io/Piercing-world/">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcROOE8MwICia8OolqeHOic2KhsILF8AU9fUTA&usqp=CAU" alt="piercing" width="200px" height="200px"></p>
   </a>
 </body>
 </html>
