--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@ Project Portfolio
     display:flex;
   }
   .prodigy{
-  display:inline-block:
+  display:inline-block;
   }
 </style>
 </header>
 
 <body>
-  <h1> Les petits projets d'Inès>
+  <h1> Les petits projets d'Inès</h1>
  <div class="parent">
  <p> Voici une page internet rendant hômmage à Rosa Parks <a class="prodigy" href="https://geekyness.github.io/Showcasing-projects/">
     <img src="https://upload.wikimedia.org/wikipedia/commons/c/c4/Rosaparks.jpg" alt="Rosa Parks" width="200px" height="200px"></p>
