--- a/index.html
+++ b/index.html
@@ -11,19 +11,23 @@ Project Portfolio
   .prodigy{
   display:inline-block;
   }
+  .p{
+  background-color:silver;
+  color:white;
+  }
 </style>
 </header>
 
 <body>
   <h1> Les petits projets d'Inès</h1>
  <div class="parent">
- <p> Voici une page internet rendant hômmage à Rosa Parks <a class="prodigy" href="https://geekyness.github.io/Showcasing-projects/">
+ <p>site hômmage à Rosa Parks <a class="prodigy" href="https://geekyness.github.io/Showcasing-projects/">
     <img src="https://upload.wikimedia.org/wikipedia/commons/c/c4/Rosaparks.jpg" alt="Rosa Parks" width="200px" height="200px"></p>
  
-  <p>voici un formulaire en ligne sur le travail à distance, sujet qui me tient à coeur <a class="prodigy" href="https://geekyness.github.io/Showcasing-projects-online-worker-survey/">
+  <p>un formulaire en ligne sur le travail à distance <a class="prodigy" href="https://geekyness.github.io/Showcasing-projects-online-worker-survey/">
     <img src="https://image.flaticon.com/icons/png/128/2706/2706988.png" alt="survey" width="200px" height="200px">
     </a></p>
-  <p> ce site présente des piercings ce type d'architecture de site peut être utiliser pour présenter des oeuvres d'artistes ou des produits d'un site marchands<a class="prodigy" href="https://geekyness.github.io/Piercing-world/">
+  <p> ce site présente des piercings<a class="prodigy" href="https://geekyness.github.io/Piercing-world/">
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcROOE8MwICia8OolqeHOic2KhsILF8AU9fUTA&usqp=CAU" alt="piercing" width="200px" height="200px"></p>
    </a></p>
 </body>
