--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@ Project Portfolio
 <body>
   <h1> Les petits projets d'Inès</h1>
  <div class="parent">
- <p>site hômmage à Rosa Parks <a class="prodigy" href="https://geekyness.github.io/Showcasing-projects/">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/c/c4/Rosaparks.jpg" alt="Rosa Parks" width="200px" height="200px"></p>
+ <a class="prodigy" href="https://geekyness.github.io/Showcasing-projects/">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/c/c4/Rosaparks.jpg" alt="Rosa Parks" width="200px" height="200px">site hômmage à Rosa Parks</a>
  
-  <p>un formulaire en ligne sur le travail à distance <a class="prodigy" href="https://geekyness.github.io/Showcasing-projects-online-worker-survey/">
-    <img src="https://image.flaticon.com/icons/png/128/2706/2706988.png" alt="survey" width="200px" height="200px">
-    </a></p>
-  <p> ce site présente des piercings<a class="prodigy" href="https://geekyness.github.io/Piercing-world/">
+  <a class="prodigy" href="https://geekyness.github.io/Showcasing-projects-online-worker-survey/">
+    <img src="https://image.flaticon.com/icons/png/128/2706/2706988.png" alt="survey" width="200px" height="200px"> un formulaire en ligne sur le travail à distance
+    </a>
+ <a class="prodigy" href="https://geekyness.github.io/Piercing-world/">
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcROOE8MwICia8OolqeHOic2KhsILF8AU9fUTA&usqp=CAU" alt="piercing" width="200px" height="200px"></p>
-   </a></p>
+     ce site présente des piercings </a></p>
 </body>
 </html>
