--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Project Portfolio
   .prodigy{
   display:inline-block;
   }
-  .p{
+  .body{
   background-color:silver;
   color:white;
   }
@@ -21,14 +21,24 @@ Project Portfolio
 <body>
   <h1> Les petits projets d'Inès</h1>
  <div class="parent">
- <a class="prodigy" href="https://geekyness.github.io/Showcasing-projects/">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/c/c4/Rosaparks.jpg" alt="Rosa Parks" width="200px" height="200px">site hômmage à Rosa Parks</a>
+<figure> <a class="prodigy" href="https://geekyness.github.io/Showcasing-projects/">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/c/c4/Rosaparks.jpg" alt="Rosa Parks"
+         width="200px" height="200px"></a>
+  <figcaption>site hômmage à Rosa Parks</figcaption>
+   </figure>
  
-  <a class="prodigy" href="https://geekyness.github.io/Showcasing-projects-online-worker-survey/">
-    <img src="https://image.flaticon.com/icons/png/128/2706/2706988.png" alt="survey" width="200px" height="200px"> un formulaire en ligne sur le travail à distance
+  <figure> <a class="prodigy" href="https://geekyness.github.io/Showcasing-projects-online-worker-survey/">
+    <img src="https://image.flaticon.com/icons/png/128/2706/2706988.png" alt="survey" width="200px" height="200px">
+
     </a>
- <a class="prodigy" href="https://geekyness.github.io/Piercing-world/">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcROOE8MwICia8OolqeHOic2KhsILF8AU9fUTA&usqp=CAU" alt="piercing" width="200px" height="200px"></p>
-     ce site présente des piercings </a></p>
+    <figcaption> un formulaire en ligne sur le travail à distance</figcaption>
+   </figure>
+   
+   
+<figure> <a class="prodigy" href="https://geekyness.github.io/Piercing-world/">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcROOE8MwICia8OolqeHOic2KhsILF8AU9fUTA&usqp=CAU" alt="piercing" width="200px"
+         height="200px"></p>
+  </a> <figcaption>ce site présente des piercings</figcaption>
+   </figure>
 </body>
 </html>
