--- a/index.html
+++ b/index.html
@@ -5,16 +5,20 @@
 Project Portfolio
 </title>
 <style>
+  .body{
+  background-color:silver;
+  color:white;
   .parent{
     display:flex;
   }
   .prodigy{
   display:inline-block;
   }
-  .body{
-  background-color:silver;
-  color:white;
+  
   }
+  .figcaption{
+    background-color:silver;
+    color:white;}
 </style>
 </header>
 
