--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ Project Portfolio
 </title>
 <style>
   .body{
-  background-color:silver;
-    color:white;
+  background-color:#C0C0C0;
+    color:#fffffff;
   }
   
   .parent{
