--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@ Project Portfolio
     align-content:center;
   }
   
-  }
+  .figure{
+    background-color:silver;
+    color:white;}
+    
   .figcaption{
     background-color:silver;
     color:white;}
