--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@ Project Portfolio
   .prodigy{
   display:inline-block;
     align-content:center;
+    justify-content:center;
+     background-color:silver;
+    color:white;}
   }
   
   .figure{
-    background-color:silver;
-    color:white;}
+   
     
   .figcaption{
     background-color:silver;
