--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 Project Portfolio
 </title>
 <style>
-  #body{
+  .body{
   background-color:#C0C0C0;
     color:#fffffff;
   }
@@ -17,16 +17,10 @@ Project Portfolio
   display:inline-block;
     align-content:center;
     justify-content:center;
-     background-color:silver;
-    color:white;}
+    
   }
   
-  .figure{
-   
-    
-  .figcaption{
-    background-color:silver;
-    color:white;}
+
 </style>
 </header>
 
