--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@ Project Portfolio
   background-color:#C0C0C0;
     color:#fffffff;
   }
+  .h1
+  {
+    align-content:center;}
   
   .parent{
     display:flex;
