--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ Project Portfolio
 <style>
   *{
   background-color:#C0C0C0;
-    color:#fffffff;
+    color:white;
   }
   .h1
   {
@@ -20,6 +20,7 @@ Project Portfolio
   display:inline-block;
     align-content:center;
     justify-content:center;
+   border:
     
   }
   
