--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@ Project Portfolio
   display:inline-block;
     align-content:center;
     justify-content:center;
-   border:
-    
   }
+ .img-border{
+ }
+ 
   
 
 </style>
@@ -34,13 +35,13 @@ Project Portfolio
   <br><br>
  <div class="parent">
 <figure> <a class="prodigy" href="https://geekyness.github.io/Showcasing-projects/">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/c/c4/Rosaparks.jpg" alt="Rosa Parks"
+    <img class="img-border" src="https://upload.wikimedia.org/wikipedia/commons/c/c4/Rosaparks.jpg" alt="Rosa Parks"
          width="200px" height="200px"></a>
   <figcaption>site hômmage à Rosa Parks</figcaption>
    </figure>
  
   <figure> <a class="prodigy" href="https://geekyness.github.io/Showcasing-projects-online-worker-survey/">
-    <img src="https://image.flaticon.com/icons/png/128/2706/2706988.png" alt="survey" width="200px" height="200px">
+    <img class="img-border" src="https://image.flaticon.com/icons/png/128/2706/2706988.png" alt="survey" width="200px" height="200px">
 
     </a>
     <figcaption> un formulaire en ligne sur le travail à distance</figcaption>
@@ -48,7 +49,7 @@ Project Portfolio
    
    
 <figure> <a class="prodigy" href="https://geekyness.github.io/Piercing-world/">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcROOE8MwICia8OolqeHOic2KhsILF8AU9fUTA&usqp=CAU" alt="piercing" width="200px"
+    <img class="img-border" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcROOE8MwICia8OolqeHOic2KhsILF8AU9fUTA&usqp=CAU" alt="piercing" width="200px"
          height="200px"></p>
   </a> <figcaption>ce site présente des piercings</figcaption>
    </figure>
