--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Project Portfolio
    
    
 <figure> <a class="prodigy" href="https://geekyness.github.io/Piercing-world/">
-    <img class="img-border" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcROOE8MwICia8OolqeHOic2KhsILF8AU9fUTA&usqp=CAU" alt="piercing" width="200px"
+    <img class="img-border" src="https://audreypiercing.files.wordpress.com/2017/12/banane-titane.jpg?w=1400&h=&crop=1" alt="piercing" width="200px"
          height="200px"></p>
   </a> <figcaption>ce site présente des piercings</figcaption>
    </figure>
