--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ Project Portfolio
 </title>
 <style>
   *{
-  background-color:#C0C0C0;
+  background-color:black;
     color:white;
    font-family:courier;
   }
