--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Project Portfolio
    </figure>
  
   <figure> <a class="prodigy" href="https://geekyness.github.io/Showcasing-projects-online-worker-survey/">
-    <img class="img-border" src="https://image.flaticon.com/icons/png/128/2706/2706988.png" alt="survey" width="200px" height="200px">
+    <img class="img-border" src="https://static.thenounproject.com/png/629098-200.png" alt="survey" width="200px" height="200px">
 
     </a>
     <figcaption> un formulaire en ligne sur le travail à distance</figcaption>
