--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@ Project Portfolio
 <body>
   <h1> Les petits projets d'Inès</h1>
   <br><br>
+ <h2> Projets HTML et CSS </h2>
+ <br><br>
  <div class="parent">
 <figure> <a class="prodigy" href="https://geekyness.github.io/Showcasing-projects/">
     <img class="img-border" src="https://upload.wikimedia.org/wikipedia/commons/c/c4/Rosaparks.jpg" alt="Rosa Parks"
