--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ Project Portfolio
    </figure>
  
   <figure> <a class="prodigy" href="https://geekyness.github.io/Showcasing-projects-online-worker-survey/">
-    <img class="img-border" src="https://static.thenounproject.com/png/629098-200.png" alt="survey" width="200px" height="200px">
+    <img class="img-border" src="https://www.google.com/search?q=online+survey+icon&rlz=1C1CHNY_frFR981FR981&sxsrf=AOaemvJmOaTgA-AN851DCeSVep7K95R_CQ:1638537683381&tbm=isch&source=iu&ictx=1&fir=s9zK5-4_l2MBZM%252CDBJif7QqABjbXM%252C_%253B4tEnbpdauOnrDM%252CXeo2Zew4Kt2saM%252C_%253B0RzqRa3jzPhbQM%252CcHCENKtErVHzUM%252C_%253BhEGwtZA0y_JuMM%252C6296Dy8naZrW3M%252C_%253Bbt5FlwuB-tbbHM%252Cg_RVblYX63dq-M%252C_%253BNqN4MxxYpsr1AM%252Cl4YCwqquGUMnqM%252C_%253BSdrnBPGwALhe1M%252CXeo2Zew4Kt2saM%252C_%253B_QOi6Vmm6S_uYM%252Cqg_f2dazoE8CKM%252C_%253BUgaKQlE83FZULM%252CUxQ7MiQaqazkkM%252C_%253Ba2UzkktIKXQ7yM%252CzqJl_jeVwHJduM%252C_%253BfKcjsUskHi0LHM%252C3x6OeckBg3UaEM%252C_%253BN_uM2FE0EW76eM%252CkgTJE8EZiusR5M%252C_%253Bt5CiWSLeKuYc8M%252CHzBaYSZkVGc2UM%252C_%253BZ_B5YZo9RDnBlM%252C_grOQzolSUFCLM%252C_%253BZnNVtG3epOb7_M%252CWj4d14gRNob4fM%252C_%253BcHn0_gLVFcGSkM%252C-s2DyBhhq5TL8M%252C_&vet=1&usg=AI4_-kTN6_ge8ZGYAaiKrNp8Ld_wu616TA&sa=X&ved=2ahUKEwiykMbE3Mf0AhWTgs4BHR0cCK0Q9QF6BAgDEAE#imgrc=s9zK5-4_l2MBZM" alt="survey" width="200px" height="200px">
 
     </a>
     <figcaption> un formulaire en ligne sur le travail à distance</figcaption>
