--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Project Portfolio
     <img class="img-border" src="https://img.myloview.com/stickers/business-online-survey-icon-outline-business-online-survey-vector-icon-for-web-design-isolated-on-white-background-700-220582191.jpg" alt="survey" width="200px" height="200px">
 
     </a>
-    <figcaption> un formulaire en ligne sur le travail à distance</figcaption>
+    <figcaption> un formulaire en ligne</figcaption>
    </figure>
    
    
