--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Project Portfolio
    
 <figure> <a class="prodigy" href="https://geekyness.github.io/Piercing-world/">
     <img class="img-border" src="https://audreypiercing.files.wordpress.com/2017/12/banane-titane.jpg?w=1400&h=&crop=1" alt="piercing" width="200px"
-         height="200px"></p>
+         height="200px"></a>
   </a> <figcaption>ce site présente des piercings</figcaption>
    </figure>
 </body>
