--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@ Project Portfolio
  .img-border{
   border-width:20px;
   border-color:white;
+  border-radius: 8px;
+  box-shadow: 8px 10px 0px 0px rgba(192, 192, 192, 0.5);
  }
  
   
