--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ Project Portfolio
   background-color:black;
     color:white;
    font-family:courier;
+   font-weight:bold;
   }
   h1
   {
@@ -26,7 +27,7 @@ Project Portfolio
   border-width:20px;
   border-color:white;
   border-radius: 8px;
-  box-shadow: 8px 10px 0px 0px rgba(192, 192, 192, 0.5);
+  box-shadow: 8px -10px 0px 0px rgba(192, 192, 192, 0.5);
  }
  
   
