--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Project Portfolio
  <h2> Projets HTML et CSS </h2>
  <br><br>
  <div class="parent">
-<figure> <a class="prodigy" href="https://geekyness.github.io/Showcasing-projects/">
+<figure> <a class="prodigy" href="https://geekyness.github.io/Rosa-Parks/">
     <img class="img-border" src="https://upload.wikimedia.org/wikipedia/commons/c/c4/Rosaparks.jpg" alt="Rosa Parks"
          width="200px" height="200px"></a>
   <figcaption>site hômmage à Rosa Parks</figcaption>
