--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@ Project Portfolio
          height="200px"></a>
   </a> <figcaption>ce site présente des piercings</figcaption>
    </figure>
- <br>
+ <br><br><br>
+  <h2> Projets Vanilla Javascript </h2>
+ <br><br>
  <figure> <a class="prodigy" href="https://geekyness.github.io/To-do-list/">
     <img class="img-border" src="https://cdn5.vectorstock.com/i/1000x1000/08/54/todo-list-icon-vector-14270854.jpg" alt="todolist" width="200px"
          height="200px"></a>
