--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ Project Portfolio
  <figure> <a class="prodigy" href="https://geekyness.github.io/To-do-list/">
     <img class="img-border" src="https://cdn5.vectorstock.com/i/1000x1000/08/54/todo-list-icon-vector-14270854.jpg" alt="todolist" width="200px"
          height="200px"></a>
-  </a> <figcaption>ceci est une to-do-list</figcaption>
+  </a> <figcaption>to-do-list</figcaption>
    </figure>
 </body>
 </html>
