--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@ Project Portfolio
   .parent{
     display:flex;
   }
+ .parent 2{
+  display:flex;
+ }
   .prodigy{
   display:inline-block;
     align-content:center;
@@ -60,6 +63,9 @@ Project Portfolio
          height="200px"></a>
   </a> <figcaption>ce site présente des piercings</figcaption>
    </figure>
+ </div>
+ 
+ <div class="parent 2">
  <br><br><br>
   <h2> Projets Vanilla Javascript </h2>
  <br><br>
@@ -68,5 +74,6 @@ Project Portfolio
          height="200px"></a>
   </a> <figcaption>to-do-list</figcaption>
    </figure>
+ </div>
 </body>
 </html>
