--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Project Portfolio
   <h2> Projets Vanilla Javascript </h2>
  <br><br>
  <figure> <a class="prodigy" href="https://geekyness.github.io/To-do-list/">
-    <img class="img-border" src="https://cdn5.vectorstock.com/i/1000x1000/08/54/todo-list-icon-vector-14270854.jpg" alt="todolist" width="200px"
+    <img class="img-border" src="https://image.freepik.com/icones-gratuites/todo-list_318-10185.jpg" alt="todolist" width="200px"
          height="200px"></a>
   </a> <figcaption>to-do-list</figcaption>
    </figure>
